hphp/hack/test/typecheck/reactive/vararg_mutable3.php.exp
File "vararg_mutable3.php", line 5, characters 12-37:
Attributes on variadic parameters are not allowed (Parsing[1002])
