hphp/hack/test/typecheck/reactive/vararg_mutable3.php
<?hh
class A {}


function f(<<__MaybeMutable>> A ...$a): void {
}
